# MyProcessManager

./: .gitignore  CMakeLists.txt  README.md
include/: activeProcesses.h  common.h  errors.h  process.h  process_types.h  systemMonitor.h
src/: activeProcesses.cpp  common.cpp  errors.cpp  main.cpp  process.cpp  process_types.cpp  systemMonitor.cpp
